[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Animated Objects/Traps/Matxich3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Projetil_pedra.gd" type="Script" id=2]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/throw.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[node name="Projetil_pedra" type="Area2D" groups=["inimigos", "pedra", "projeteis"]]
collision_layer = 32
collision_mask = 96
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 21, -10 )

[node name="Som_arremessada" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_Projetil_pedra_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Projetil_pedra_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
